Done with a first draft of the thesis

--- a/Main.tex
+++ b/Main.tex
@@ -79,6 +79,8 @@
 \setcounter{page}{1}
 \pagenumbering{Roman}			% Capitalized roman numbering starting from I (one)
 
+\input{include/backmatter/LabviewManual}
+
 \input{include/backmatter/Code}
 
 \input{include/backmatter/TestingProtocol}
