--- a/include/Introduction.tex
+++ b/include/Introduction.tex
@@ -25,4 +25,4 @@ A secondary aim of the project is to improve the development experience of the b
 
 \section{Limitations}
 
-The main limitation of the given assignment is that the only part of the Autobike which will be changed is the software; the hardware will be left in its current state. Additionally, code that enables the bike to follow a predetermined path will not be written. It should therefore not be a goal that the bike can drive in a straight line either, since this would require knowledge about the current and past positions. 
+The main limitation of the given assignment is that the only part of the Autobike which will be changed is the software; the hardware will be left in its current state. Additionally, code that enables the bike to follow a predetermined path will not be written. It should therefore not be a goal that the bike can drive in a straight line either, since this would require knowledge about the current and past positions. Thirdly, the speed of the forward motor should not be able to be changed by the balancing algorithm.
