--- a/include/Methods.tex
+++ b/include/Methods.tex
@@ -139,7 +139,7 @@ In an attempt to make it easier for both the current and future people working o
 
 The LabVIEW code that was received from the previous project group has been cleaned up, meaning that the main program has been separated into several sub-VIs, and unused code has been removed. The main advantage of creating sub-VIs is to reduce the area which the LabVIEW code uses; a large area makes it hard to locate code since you can not zoom inside LabVIEW. The code that has been removed are mainly VIs that were either old versions of the main VI, or old code used for testing individual components (presumably from before this was integrated into the main VI). By removing unused VIs the potential confusion about what a VI does, and which VI is the most recent one, is mitigated.
 
-Care has also been taken to document the new code that has been written, as well as the old code, so that anyone can continue the development process without having to interpret all of the code without any guidance. In addition to writing comments inline in the C and LabVIEW files, a \texttt{README.md} file has also been created in the root of the repository. This file lists all the folders that are currently present and explains their purpose. When relevant, this file also contains instructions for how the content of the folder should be used.
+Care has also been taken to document the new code that has been written, as well as the old code, so that anyone can continue the development process without having to interpret all of the code without any guidance. In addition to writing comments inline in the C and LabVIEW files, a \texttt{README.md} file has also been created in the root of the repository. This file lists all the folders that are currently present and explains their purpose. When relevant, this file also contains instructions for how the content of the folder should be used. A user manual for the LabVIEW program has also been written. This can be found in appendix \ref{labviewManaul}.
 
 \section{Logging of Control and Sensor Signals} \label{method:logging}
 
@@ -181,7 +181,9 @@ The data which was chosen to be recorded, logged and plotted with MATLAB include
 
 \subsection{Testing the Program's Loop Times} \label{method:loopTimes}
 
-While not being apart of the project's aim in itself, the performance of the program is of interest. This is because the bike's balancing could potentially be impacted if parts of the program takes too long to run. To be able to measure the performance, the time to run one iteration of each loop in the LabVIEW program was recorded. These times are then added together to get a total loop time for the program. The members of the previous project group have done a more in depth examination of this performance, which means that the values which are retrieved during the current testing can be compared with those values. It should be noted that because a while-loop had to be used for the forward motor control, the time it takes to run can not be measured. However, since a delay of one second runs in the loop, that is the loop time unless the other code in the loop takes longer to compute (which it does not). Additionally, the loop time of the forward motor control does not matter in this stage of the project, since the speed of the motor will be kept constant.
+While not being apart of the project's aim in itself, the performance of the program is of interest. This is because the bike's balancing could potentially be impacted if parts of the program takes too long to run. To be able to measure the performance, the time to run one iteration of each loop in the LabVIEW program was recorded. These times are then added together to get a total loop time for the program. The members of the previous project group have done a more in depth examination of this performance, which means that the values which are retrieved during the current testing can be compared with those values.
+
+It should be noted that because a while-loop had to be used for the forward motor control, the time it takes to run cannot be measured. However, since a delay of one second exists in the loop, this is the loop time unless the other code in the loop takes longer to compute (which it does not). Additionally, the loop time of the forward motor control does not matter in this stage of the project, since the speed of the motor will be kept constant.
 
 \subsection{Test Protocol}
 
