--- a/include/backmatter/Code.tex
+++ b/include/backmatter/Code.tex
@@ -1,6 +1,6 @@
 \chapter{Code} \label{code}
 
-This Appendix contains some of the code that have been used on the bike, or during the project. Some of the code, like the main LabVIEW program, is difficult to include in the appendix, but can be found on the Github repository together with all of the other code at the following URL: \url{https://github.com/Hannnes1/autobike}
+This Appendix contains some of the code which have been used on the bike, or during the project. Some of the code, for example the main LabVIEW program, is difficult to include in the appendix, but can be found on the GitHub repository together with all of the other pieces of code at the following URL: \url{https://github.com/Hannnes1/autobike}
 
 \section{Balancing Algorithm} \label{code:balancing}
 
