--- a/include/frontmatter/Titlepage.tex
+++ b/include/frontmatter/Titlepage.tex
@@ -50,16 +50,15 @@ Undefined Thesis type in settings.tex
 \begin{figure}[H]
 \centering
 \vspace{1cm}	% Adjust vertical spacing here
-\includegraphics[width=0.9\linewidth]{figure/Wind.png}
+\includegraphics[width=0.9\linewidth]{figure/Autobike.png}
 \end{figure}
 
 % Cover text
 \mbox{}
 \vfill
 \renewcommand{\familydefault}{\sfdefault} \normalfont % Set cover page font
-\textbf{{\Huge 	A Chalmers University of Technology 	\\[0.2cm] 
-				Master's thesis template for \LaTeX}} 	\\[0.5cm]
-{\Large A Subtitle that can be Very Much Longer if Necessary}\\[0.5cm]
+\textbf{{\Huge 	Programming a self driving bike}} 	\\[0.5cm]
+{\Large Implementing a balancing algorithm in a self driving bike}\\[0.5cm]
 Bachelor's Thesis in Department of Electrical Engineering \setlength{\parskip}{1cm}
 
 \noindent
@@ -89,8 +88,8 @@ Bachelor's Thesis in Department of Electrical Engineering \setlength{\parskip}{1
 \thispagestyle{empty}
 \begin{center}
 	\textsc{\large Bachelor's thesis \the\year}\\[4cm]
-	\textbf{\Large An Informative Headline describing\\ the Content of the Report} \\[1cm]
-	{\large A Subtitle that can be Very Much Longer if Necessary}\\[1cm]
+	\textbf{\Large Programming a self driving bike} \\[1cm]
+	{\large Implementing a balancing algorithm in a self driving bike}\\[1cm]
 	{\large ELLIOT ANDERSSON}\\
 	{\large HANNES HULTERGÅRD}
 	
@@ -118,8 +117,8 @@ Bachelor's Thesis in Department of Electrical Engineering \setlength{\parskip}{1
 \newpage
 \thispagestyle{plain}
 \vspace*{4.5cm}
-An Informative Headline describing the Content of the Report\\
-A Subtitle that can be Very Much Longer if Necessary\\
+Programming a self driving bike\\
+Implementing a balancing algorithm in a self driving bike\\
 ELLIOT ANDERSSON, HANNES HULTERGÅRD \setlength{\parskip}{1cm}
 
 \copyright ~ ELLIOT ANDERSSON, HANNES HULTERGÅRD, \the\year. \setlength{\parskip}{1cm}
@@ -135,7 +134,7 @@ Telephone +46 31 772 1000 \setlength{\parskip}{0.5cm}
 
 \vfill
 % Caption for cover page figure if used, possibly with reference to further information in the report
-Cover: Wind visualization constructed in Matlab showing a surface of constant wind speed along with streamlines of the flow. \setlength{\parskip}{0.5cm}
+Cover: The red version of the Autobike. \setlength{\parskip}{0.5cm}
 
 Typeset in \LaTeX \tagtemp\\
 Gothenburg, Sweden \the\year
