--- a/include/settings/Settings.tex
+++ b/include/settings/Settings.tex
@@ -36,6 +36,7 @@
 \usepackage{subcaption}
 \usepackage[all]{nowidow}                           % No single lines at start of page
 \usepackage{siunitx}
+\usepackage{emptypage}                              % Empty page between chapters
 
 % DEFINE THESIS TYPE
 \def\ThesisType{B} % M - master, B - bachelor
