--- a/include/frontmatter/Acknowledgements.tex
+++ b/include/frontmatter/Acknowledgements.tex
@@ -1,11 +1,14 @@
 % CREATED BY MAGNUS GUSTAVER, 2020
 \thispagestyle{plain}			% Supress header
 \section*{Acknowledgements}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+Firstly, we would like to thank our examiner and supervisor Jonas Sjöberg for his guidance and for giving us the opportunity to work on the Autobike. We would also like to thank Henrik Falk at Mälardalen University for helping us getting started with LabVIEW, and for answering any questions that we had about the program during the course of the project. Lastly, we would like to thank Guanzheng Wen who has worked with us on the Autobike and helped us with solving problems and testing the bike.
 
 \vspace{1.5cm}
-\hfill
-Name Familyname, Gothenburg, Month Year
+\begin{flushright}
+    Elliot Andersson and Hannes Hultergård\\
+    Gothenburg, June 2022
+\end{flushright}
 
 \newpage				% Create empty back of side
 \thispagestyle{empty}
